--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ PGUSER=postgres
 PGPASSWORD=root
 PGDATABASE=zaloapi
 PGSSL=false
+CHATBOT_CUSTOM_URL=https://chatbotproduct.quandoiai.vn
+CHATBOT_MOBILE_URL=https://chatbotmobile.quandoiai.vn
+DANGBAI_BASE_URL=http://localhost:8000
