--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "redis": "^4.6.14",
-    "pg": "^8.11.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1",
+    "redis": "^5.8.2",
+    "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "zca-js": "^2.0.0-beta.27"
+    "zca-js": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
