--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "zca-js": "^2.0.1"
+    "zca-js": "^2.0.1",
+    "sharp": "^0.33.5"
+    ,"multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
